<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.commont.LoginProfesorActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:text="@string/txtLoginprofesor"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/login_cliente"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/etEmail"
                android:id="@+id/etEmail"
                android:inputType="text"
                android:drawableStart="@drawable/icono_email"
                android:drawablePadding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/etPassword"
                android:hint="@string/etPassword"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--LoginCliente-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginC"
            android:text="@string/btnLogin"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textAllCaps="true"
            app:cornerRadius="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Txt-->
        <TextView
            android:text="@string/txtNoCuenta"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Btn registro-->
        <TextView
            android:id="@+id/tvRegistrarC"
            android:text="@string/tvRegistrarme"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/celesteoscuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>