<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.RegistroProfesorActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/txtRegistroProfesor"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/registro_cliente"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="80dp"
            android:layout_height="80dp">

        </androidx.appcompat.widget.AppCompatImageView>

        <!--Nombre-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/etNombreC"
                android:hint="@string/etNombreA"
                android:drawableStart="@drawable/icono_nombrecompleto"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <EditText
                android:hint="@string/etEmailA"
                android:id="@+id/etEmailC"
                android:drawableStart="@drawable/icono_email"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:hint="@string/etPassword"
                android:id="@+id/etPasswordC"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Confirmar Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:hint="@string/etCPassword"
                android:id="@+id/etCPasswordC"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Botonregistrar-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRegistrar"
            android:id="@+id/btnregistrarA"
            android:textAllCaps="true"
            app:cornerRadius="8dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>